actually update composer ;)

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,10 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "^6.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "Kevdotbadger\\Zoho\\": "src/"
+        }
     }
 }
