--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Kevdotbadger/Zoho",
+    "name": "kevinruscoe/zoho",
     "authors": [
         {
             "name": "Kevin Ruscoe",
