--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "authors": [
         {
             "name": "Kevin Ruscoe",
-            "email": "kevin@popcreative.co.uk"
+            "email": "hello@kevinruscoe.me"
         }
     ],
     "require": {
